--- a/index.html
+++ b/index.html
@@ -6,30 +6,37 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css?family=Lato:300|Playfair+Display:400,900&display=swap" rel="stylesheet">
   <title>Vittoria Erdem</title>
-  <link href="css/main.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="css/main.css">
+  <script defer src="js/main.js"></script>
 </head>
 <body>
-  <header>
-      <nav role="navigation">
-          <ul>
-            <h1>Vittoria Erdem</h1>
-            <li><a href="#">PROJECTS</a></li>
-            <li><a href="#">ABOUT ME</a>
-              <ul class="dropdown">
-                <li><a href="#">Sub-1</a></li>
-                <li><a href="#">Sub-2</a></li>
-                <li><a href="#">Sub-3</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Three</a></li>
-          </ul>
-        </nav>
-      </header>
-<main></main>
-
-
-
-
+    <section class="navigation">
+        <div class="nav-container">
+          <div class="brand">
+          <a href="#!">Vittoria Erdem</a>
+          </div>
+          <nav>
+            <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+            <ul class="nav-list">
+              <li><a href="#!">ABOUT ME</a></li>
+              <li>
+                <a href="#!">PROJECTS</a>
+                <ul class="nav-dropdown">
+                    <li><a href="#!">Web Design</a></li>
+                    <li><a href="#!">Web Development</a></li>
+                    <li><a href="#!">Branding</a></li>
+                </ul>
+              </li>
+              <li><a href="#!">CONTACT</a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+      
+        <secion class="homeBody">
+            <h2 id="brand">An Austin-based front-end software engineer</h2>
+                    <p><a href="/">View Projects</a></p>
+        </section>    
 
 </body>
 </html>
