add projects, about, contact files

--- a/index.html
+++ b/index.html
@@ -13,30 +13,35 @@
     <section class="navigation">
         <div class="nav-container">
           <div class="brand">
-          <a href="#!">Vittoria Erdem</a>
+          <a href="index.html">Vittoria Erdem</a>
           </div>
           <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
-              <li><a href="#!">ABOUT ME</a></li>
+              <li><a href="aboutme.html">ABOUT</a></li>
               <li>
-                <a href="#!">PROJECTS</a>
-                <ul class="nav-dropdown">
+                <a href="projects.html">PROJECTS</a>
+                <!-- <ul class="nav-dropdown">
                     <li><a href="#!">Web Design</a></li>
                     <li><a href="#!">Web Development</a></li>
                     <li><a href="#!">Branding</a></li>
-                </ul>
+                </ul> -->
               </li>
-              <li><a href="#!">CONTACT</a></li>
+              <li><a href="contact.html">CONTACT</a></li>
             </ul>
           </nav>
         </div>
       </section>
       
-        <secion class="homeBody">
-            <h2 id="brand">An Austin-based front-end software engineer</h2>
-                    <p><a href="/">View Projects</a></p>
-        </section>    
+      <section class="homeBody">
+          <h2 id="name">Hello I'm Vittoria</h2>
+          <h2 id="brand">Front-end software engineer</h2>
+          <br>
+          <br>
+          <p><a id="viewProject" href="projects.html">View My Projects</a></p>
+          <br>
+          <br>
+      </section>    
 
 </body>
 </html>
