--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <nav>
             <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
             <ul class="nav-list">
-              <li><a href="aboutme.html">ABOUT</a></li>
+              <li><a href="about.html">ABOUT</a></li>
               <li>
                 <a href="projects.html">PROJECTS</a>
                 <!-- <ul class="nav-dropdown">
