add about page information

--- a/about.html
+++ b/about.html
@@ -32,7 +32,32 @@
       </nav>
     </div>
   </section>
-      
+  <section id="bioBody">
+      <div id="bio">  
+        <h1 id="bioTitle">About Vittoria</h1>
+        
+        <h2 id="bioBrand">
+          Vittoria Erdem is a front-end software engineer with a background
+          in process improvement. Her mission is to solve problems and streamline
+          tasks with efficient, well-designed software. 
+        </h2>
+
+        <h4 id="bioStatement">
+          She tackles new challenges by focusing on functionality, clean aesthetics 
+          and goal-oriented innovation. 
+          <br>
+          <br>
+          In her spare time, Vittoria can be found in Austin, Texas with her husband, Erdi.
+          She loves to travel to new places, try anything red velvet flavored and hanging
+          out with her cats, Smallcat and Tinycat. 
+        </h4>
+    </div>
+  </section>    
+  <section id="bioPhotos"> 
+    <div class="bioPhotos"></div>
+    <div class="bioPhotos"></div>
+    <div class="bioPhotos"></div>
+  </section>
 
 </body>
 </html>
