update project photo grid

--- a/index.html
+++ b/index.html
@@ -43,5 +43,30 @@
           <br>
       </section>    
 
+
+      <section>
+          <div>
+                <div>
+                    <div id="homeImages">
+                        <div class="bioPhotos">
+                          <img src="images/taskly.jpg" alt="Taskly" height="150px">
+                          <h3 class="photoTitle">Bingo Game</h3>
+                          <p>Design & Development</p>
+                        </div>
+                        <div class="bioPhotos">
+                            <img src="images/taskly.jpg" alt="Taskly" height="150px">
+                            <h3 class="photoTitle">Bingo Game</h3>
+                            <p>Development</p>
+                          </div>
+                          <div class="bioPhotos">
+                              <img src="images/taskly.jpg" alt="Taskly" height="150px">
+                              <h3 class="photoTitle">Bingo Game</h3>
+                              <p>Development</p>
+                            </div>
+                    </div>
+                </div>
+          </div>
+        </section>
+
 </body>
 </html>
