--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,24 @@
       </nav>
     </div>
   </section>
-      
+
+  <section>
+    <div>
+        <h1 id="projectTitle">Projects</h1>
+          <div>
+              <div id="projectImages1">
+                  <div class="projectPhotos"></div>
+                  <div class="projectPhotos"></div>
+                  <div class="projectPhotos"></div>
+              </div>
+              <div id="projectImages2">
+                  <div class="projectPhotos"></div>
+                  <div class="projectPhotos"></div>
+                  <div class="projectPhotos"></div>
+              </div>
+          </div>
+    </div>
+  </section>
 
 </body>
 </html>
