--- a/about.html
+++ b/about.html
@@ -58,6 +58,8 @@
     <div class="bioPhotos"></div>
     <div class="bioPhotos"></div>
   </section>
-
+  <footer>
+    <p>© 2019 Vittoria Erdem. All rights reserved.</p>
+    </footer>
 </body>
 </html>
