--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
           </div>
         </section>
 
+        <section>
+          <div>
+          <footer id="footer">© 2019 Vittoria Erdem. All rights reserved.</footer>
+          </div>
+        </section>
+
 </body>
-</html>
+</html>]
