--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,8 @@
           </div>
     </div>
   </section>
-
+  <footer>
+      <p>© 2019, Vittoria Erdem. All rights reserved.</p>
+      </footer>
 </body>
 </html>
