--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <form action="#">
           
               <label for="name"> Name:</label>
-              <input type="text" id="email" name="email">
+              <input type="text" id="name" name="name">
               <br>
               <br>
               <label for="email">Email:</label>
@@ -59,5 +59,8 @@
     </div>
   </section>  
 
+  </div>
+  <footer id="footer">2019 Vittoria Erdem. All rights reserved.</footer>
+</div>
 </body>
 </html>
