--- a/about.html
+++ b/about.html
@@ -53,13 +53,25 @@
         </h4>
     </div>
   </section>    
+
   <section id="bioPhotos"> 
     <div class="bioPhotos"></div>
     <div class="bioPhotos"></div>
     <div class="bioPhotos"></div>
   </section>
-  <footer>
-    <p>© 2019 Vittoria Erdem. All rights reserved.</p>
-    </footer>
+
+  <section class="logo">
+    <div>
+      <img src="images/logo.png" alt="Taskly" height="100px">
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <footer id="footer">© 2019 Vittoria Erdem. All rights reserved.</footer>
+    </div>
+  </section>
+
+
 </body>
 </html>
