--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div>
                     <div id="homeImages">
                         <div class="bioPhotos">
-                          <img src="images/taskly.jpg" alt="Taskly" height="150px">
+                          <img src="images/logo.png" alt="Taskly" height="150px">
                           <h3 class="photoTitle">Bingo Game</h3>
                           <p>Design & Development</p>
                         </div>
@@ -67,10 +67,10 @@
                 </div>
           </div>
         </section>
-
+      
         <section>
           <div>
-          <footer id="footer">© 2019 Vittoria Erdem. All rights reserved.</footer>
+            <footer id="footer">© 2019 Vittoria Erdem. All rights reserved.</footer>
           </div>
         </section>
 
