--- a/projects.html
+++ b/projects.html
@@ -50,8 +50,18 @@
           </div>
     </div>
   </section>
-  <footer>
-      <p>© 2019, Vittoria Erdem. All rights reserved.</p>
-      </footer>
+
+  <section class="logo">
+    <div>
+      <img src="images/logo.png" alt="Taskly" height="100px">
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <footer id="footer">© 2019 Vittoria Erdem. All rights reserved.</footer>
+    </div>
+  </section>
+  
 </body>
 </html>
