--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
       </nav>
     </div>
   </section>
+
   <section id="contactBody">
       <div id="contact">  
         <h1 id="contactTitle">Contact Vittoria</h1>
@@ -52,15 +53,23 @@
               <br>
               <br>
               <input id="contactSubmit" type="submit" value="Submit">
-
             </form>
           </div>
-
     </div>
   </section>  
 
-  </div>
-  <footer id="footer">2019 Vittoria Erdem. All rights reserved.</footer>
-</div>
+  <section class="logo">
+    <div>
+      <img src="images/logo.png" alt="Taskly" height="100px">
+    </div>
+  </section>
+
+  <section>
+    <div>
+      <footer id="footer">© 2019 Vittoria Erdem. All rights reserved.</footer>
+    </div>
+  </section>
+
+
 </body>
 </html>
